fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ a{
 
 .image{
   height: 50vh;
-  width:25vw;
+  width:20vw;
   background-color:rgb(105, 105, 105)
 }
 #outer{
